# opencv-feature-tracker

./: .hgignore  BlobTrackDemo.md  BlobTrackPedestrian.cxx  CMakeLists.txt  DAISY.cxx  DailyChangeLog.md  DemoPage.md  ExtractDaisyToLibSVMPackage.cxx  ExtractDaisyToTXT.cxx  FeatureBasedTracking.cxx  InteractiveMatching.cxx  MRFMatching.cxx  MSER.cxx  NCH.cxx  PCAConstruct.cxx  PCARecognize.cxx  PCARecognizeInterestPoints.cxx  PedestrianMatching.cxx  ProjectHome.md  README.txt  ReacquisitionByTracking.cxx  SURF.cxx  SaunierSayed.cxx  TrackMatchingDistance.cxx  Tutorial.md  test_nch_svm.cpp
Data/: README  test1.avi.homography.txt  test2.avi.homography.mat  test2_short.avi
cmake_modules/: FindGFlags.cmake  FindTBB.cmake
include/: Blob.h  EdgeProcessing.h  FGDetect.h  MySequence.h  SaunierSayed_feature_grouping.h  bhattacharyya_distance.h  blob_feature.h  color_pallete.h  common.hpp  daisy_feature.h  descriptor_match.h  distance.h  draw.h  emd.h  emd_matcher.h  euclidean_distance.h  feature.h  feature_detector.h  feature_grouper_dfs_visitor.h  feature_grouper_visualizer.h  global_distance.h  misc.h  nch_feature.h  opencv_io_extra.h  pearson_coefficient.h  region_distance.h  splitter.h  svm_classifier.h  window_pair.h
include/opencv2/video/: blobdetector.hpp  blobtrack2.hpp  tracker.hpp
src/: Blob.cpp  EdgeProcessing.cpp  FGDetect.cpp  MySequence.cpp  SaunierSayed_feature_grouping.cpp  bhattacharyya_distance.cpp  blob_feature.cpp  blobdetector.cpp  daisy_feature.cpp  descriptor_match.cpp  draw.cpp  emd.c  emd_matcher.cpp  euclidean_distance.cpp  feature.cpp  feature_grouper_visualizer.cpp  misc.cpp  nch_feature.cpp  pearson_coefficient.cpp  splitter.cpp  svm_classifier.cpp  window_pair.cpp
src/blobtrack/: Blob.cpp  blob_feature.cpp  blob_matcher.cpp  blobdetector.cpp
src/featuretrack/: SaunierSayed_feature_grouping.cpp  feature_grouper_dfs_visitor.cpp  feature_grouper_visualizer.cpp
tests/: test_blob_detector.cpp  test_blob_track.cpp  test_boost_graph.cpp  test_configuration.h.in  test_daisy.cpp  test_io.cpp  test_klt_tracker.cpp  test_misc.cpp  test_sauniersayed_feature_grouping.cpp
tests/data/: pca1.yml  pca2.yml  query_points1.txt  query_points2.txt  test1.avi.homography.txt  test2.avi.homography.mat
